tests/Rules/Structure/Fixtures/valid/main_id.html.twig
<a href="#content">Go</a>
<header>Nav</header>
<div id="content">Main</div>
